--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,5 +9,5 @@ foreach (file ${files})
     string(REGEX REPLACE ${special_chars} ${delimiter} exe ${file})
     string(REGEX REPLACE "^${pre}(.*)_cpp$" "\\1" exe ${exe})
     add_executable (${exe} ${file})
-    target_link_libraries(${exe} library)
+#    target_link_libraries(${exe} library)
 endforeach ()
